src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__if_stmt-9.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| [4;31melse[0m: pass


