src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__if_stmt.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        If(
            If {
                branches: [
                    Branch {
                        cond: GetVar(
                            GetVar {
                                name: Ident(
                                    "a",
                                ),
                            },
                        ),
                        body: [
                            Pass,
                        ],
                    },
                    Branch {
                        cond: GetVar(
                            GetVar {
                                name: Ident(
                                    "b",
                                ),
                            },
                        ),
                        body: [
                            Pass,
                        ],
                    },
                    Branch {
                        cond: GetVar(
                            GetVar {
                                name: Ident(
                                    "c",
                                ),
                            },
                        ),
                        body: [
                            Pass,
                        ],
                    },
                ],
                default: Some(
                    [
                        Pass,
                    ],
                ),
            },
        ),
    ],
}
