src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__import_stmt-2.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Import(
            Module {
                path: [
                    Ident(
                        "module",
                    ),
                ],
                alias: Some(
                    Ident(
                        "temp",
                    ),
                ),
            },
        ),
        Import(
            Symbols {
                path: [
                    Ident(
                        "module",
                    ),
                ],
                symbols: [
                    ImportSymbol {
                        name: Ident(
                            "z",
                        ),
                        alias: Some(
                            Ident(
                                "temp",
                            ),
                        ),
                    },
                ],
            },
        ),
        Import(
            Symbols {
                path: [
                    Ident(
                        "module",
                    ),
                ],
                symbols: [
                    ImportSymbol {
                        name: Ident(
                            "x",
                        ),
                        alias: Some(
                            Ident(
                                "temp",
                            ),
                        ),
                    },
                    ImportSymbol {
                        name: Ident(
                            "y",
                        ),
                        alias: Some(
                            Ident(
                                "temp",
                            ),
                        ),
                    },
                    ImportSymbol {
                        name: Ident(
                            "z",
                        ),
                        alias: Some(
                            Ident(
                                "temp",
                            ),
                        ),
                    },
                ],
            },
        ),
        Import(
            Module {
                path: [
                    Ident(
                        "module",
                    ),
                    Ident(
                        "nested",
                    ),
                ],
                alias: Some(
                    Ident(
                        "temp",
                    ),
                ),
            },
        ),
        Import(
            Symbols {
                path: [
                    Ident(
                        "module",
                    ),
                    Ident(
                        "nested",
                    ),
                ],
                symbols: [
                    ImportSymbol {
                        name: Ident(
                            "z",
                        ),
                        alias: Some(
                            Ident(
                                "temp",
                            ),
                        ),
                    },
                ],
            },
        ),
        Import(
            Symbols {
                path: [
                    Ident(
                        "module",
                    ),
                    Ident(
                        "nested",
                    ),
                ],
                symbols: [
                    ImportSymbol {
                        name: Ident(
                            "x",
                        ),
                        alias: Some(
                            Ident(
                                "temp",
                            ),
                        ),
                    },
                    ImportSymbol {
                        name: Ident(
                            "y",
                        ),
                        alias: Some(
                            Ident(
                                "temp",
                            ),
                        ),
                    },
                    ImportSymbol {
                        name: Ident(
                            "z",
                        ),
                        alias: Some(
                            Ident(
                                "temp",
                            ),
                        ),
                    },
                ],
            },
        ),
    ],
}
