src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__import_stmt-3.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| [4;31mimport[0m b


