src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__infinite_loop_statements_support_semicolons.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Loop(
            Infinite(
                Infinite {
                    body: [
                        Print(
                            Print {
                                values: [
                                    GetVar(
                                        GetVar {
                                            name: Ident(
                                                "x",
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                        Print(
                            Print {
                                values: [
                                    GetVar(
                                        GetVar {
                                            name: Ident(
                                                "y",
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
        ),
        Loop(
            Infinite(
                Infinite {
                    body: [
                        Print(
                            Print {
                                values: [
                                    GetVar(
                                        GetVar {
                                            name: Ident(
                                                "x",
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
        ),
        Print(
            Print {
                values: [
                    GetVar(
                        GetVar {
                            name: Ident(
                                "y",
                            ),
                        },
                    ),
                ],
            },
        ),
        Loop(
            Infinite(
                Infinite {
                    body: [
                        Print(
                            Print {
                                values: [
                                    GetVar(
                                        GetVar {
                                            name: Ident(
                                                "x",
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                        Print(
                            Print {
                                values: [
                                    GetVar(
                                        GetVar {
                                            name: Ident(
                                                "y",
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
        ),
        Print(
            Print {
                values: [
                    GetVar(
                        GetVar {
                            name: Ident(
                                "z",
                            ),
                        },
                    ),
                ],
            },
        ),
    ],
}
